# corx

./: .coveragerc  .env.dist  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  bitbucket-pipelines.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: default.yml  deploy.yml  pages.yml
docs/: conf.py  index.rst
examples/ping_pong/: __main__.py
src/corx/: __init__.py  aggregate.py  base.py  bootstrap.py  command.py  dispatcher.py  event.py  loop.py  query.py  test.py
tests/: conftest.py  factory.py  test_dispatcher.py
